--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "task",
   "version": "0.1.0",
+  "proxy": "https://api.tinify.com",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.8.2",
